<resources>
    <string name="app_name">MPlayer</string>
    <string name="_0_11">0:11</string>
    <string name="_0_10">0:10</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_here">Sign up here!</string>
    <string name="sign_up">Sign up</string>
    <string name="back">Back</string>
    <string name="info_image">Info image</string>
    <string name="start_icon">Start icon</string>
    <string name="single">Single</string>
    <string name="family">family</string>
    <string name="log_out">log out</string>
    <string name="create_new_setup">Create new setup</string>
    <string name="use_setup">Use setup</string>
    <string name="play">play</string>
    <string name="manage_settings">manage settings</string>
    <string name="add_new_device">Add new device</string>
    <string name="add_new_setup">Add new setup</string>
    <string name="add_ne_playlist">Add new playlist</string>
    <string name="manage_devices">Manage devices</string>
    <string name="manage_setups">Manage setups</string>
    <string name="manage_playlists">Manage playlists</string>
    <string name="add_setup">add setup</string>
    <string name="delete_setup">Delete setup</string>
    <string name="done">done</string>
    <string name="select_setup">Select setup</string>
    <string name="add_song">Add song</string>
    <string name="delete">delete</string>
    <string name="select_playlist">Select playlist</string>
    <string name="add_playlist">Add playlist</string>
    <string name="delete_playlist">delete playlist</string>
    <string name="select">select</string>
    <string name="delete_song">delete song</string>
    <string name="add_device">add device</string>
    <string name="select_device">Select device</string>
    <string name="delete_device">delete device</string>
    <string name="enable">Enable</string>
    <string name="visible">Visible</string>
    <string name="discover">Discover</string>
    <string name="get_playlist">get playlist</string>
    <string name="get_songs">Get Songs</string>
    <string name="get_urls">Get Urls</string>
    <string name="get_room">Get Room</string>
    <string name="local">Local</string>
    <string name="bluetooth">bluetooth</string>
</resources>
