<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".structure.body.management.activities.setups.SetupHomeActivity">

    <Button
        android:id="@+id/setupHomeSelectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="125dp"
        android:onClick="homeSelectSetup"
        android:shadowColor="#A8A5A7"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:background="@drawable/button_style"
        android:text="@string/select_setup"
        app:layout_constraintBottom_toTopOf="@+id/setupHomeAddBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setupHomeAddBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="303dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="125dp"
        android:onClick="homeAddSetup"
        android:shadowColor="#A8A5A7"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:background="@drawable/button_style"
        android:text="@string/add_setup"
        app:layout_constraintBottom_toTopOf="@+id/setupHomeDeleteBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setupHomeDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:background="@drawable/button_style"
        android:onClick="homeDeleteSetup"
        android:shadowColor="#A8A5A7"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/delete_setup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setupHomeBackBtn"
        android:layout_width="84dp"
        android:layout_height="51dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_style"
        android:onClick="backHomeSetup"
        android:shadowColor="#A8A5A7"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>